--- a/project/styles/themes/_dark.scss
+++ b/project/styles/themes/_dark.scss
@@ -1,6 +1,6 @@
 @mixin dark-theme {
-    --foreground-color: #272727;
-    --background-color: #fff;
+    --foreground-color: #ffffff;
+    --background-color: #000000;
     --for-bg-secondary-color: #72AEC8;
 
     --link-color: var(--foreground-color);
