--- a/project/styles/themes/_light.scss
+++ b/project/styles/themes/_light.scss
@@ -8,4 +8,6 @@
 
     --button-color: var(--foreground-color);
     --button-bg-color: var(--background-color);
+
+    --wrapper-cart-body-bg-color: var(--background-color);
 }
