--- a/project/styles/components/_badges.scss
+++ b/project/styles/components/_badges.scss
@@ -1,1 +1,15 @@
+@use '../abstracts' as *;
+@use '../base' as *;
+
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
+
+.badge{
+
+    &--large{
+        font-size: $lrg-34;
+        font-weight: 200;
+    }
+    &--lighter{
+        color: #272727;
+    }
+}
