--- a/project/styles/themes/_light.scss
+++ b/project/styles/themes/_light.scss
@@ -14,6 +14,10 @@
     --button-color-third: #fff;
     --button-bg-color-third: var(--for-bg-secondary-color);
 
+    --badge-color: var(--foreground-color);
+    --badge-color-sec: var(--for-bg-secondary-color);
+    --badge-color-third: #D7DDDF;
+
     --wrapper-cart-body-bg-color: var(--background-color);
 
     --input-color: var(--foreground-color);
