--- a/project/styles/components/_badges.scss
+++ b/project/styles/components/_badges.scss
@@ -3,13 +3,24 @@
 
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
 
-.badge{
+.badge {
+    color: var(--badge-color);
 
-    &--large{
+    &--large {
         font-size: $lrg-34;
         font-weight: 200;
     }
-    &--lighter{
-        color: #272727;
+
+    &--secondary-color {
+        color: var(--badge-color-sec);
     }
+
+    &--third-color {
+        color: var(--badge-color-third);
+    }
+
+    &--bigger{
+        font-size: crem(map_get($typography,lrg-34));
+    }
+
 }
