--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
-.link, .button {
+.description--lato-14, .link, .button {
   font-family: "Lato", sans-serif;
   font-size: 0.875rem;
 }
@@ -28,6 +28,11 @@
 .title--jost-33 {
   font-family: "Jost", sans-serif;
   font-size: 2.063rem;
+}
+
+.description--lato-34 {
+  font-family: "Lato", sans-serif;
+  font-size: 2.125rem;
 }
 
 .price--bigger {
@@ -188,6 +193,9 @@ table {
   --button-bg-color-sec: var(--foreground-color);
   --button-color-third: #fff;
   --button-bg-color-third: var(--for-bg-secondary-color);
+  --badge-color: var(--foreground-color);
+  --badge-color-sec: var(--for-bg-secondary-color);
+  --badge-color-third: #D7DDDF;
   --wrapper-cart-body-bg-color: var(--background-color);
   --input-color: var(--foreground-color);
   --input-bg-color: var(--background-color);
@@ -224,7 +232,7 @@ body {
   overflow: hidden;
 }
 
-.section-subscribe, .header, .header-navigation__list-toolbar {
+.section-quotes, .section-subscribe, .header, .header-navigation__list-toolbar {
   margin-left: auto;
   margin-right: auto;
 }
@@ -295,12 +303,21 @@ body {
   gap: 2.75rem;
 }
 
+.badge {
+  color: var(--badge-color);
+}
 .badge--large {
   font-size: 2.125rem;
   font-weight: 200;
 }
-.badge--lighter {
-  color: #272727;
+.badge--secondary-color {
+  color: var(--badge-color-sec);
+}
+.badge--third-color {
+  color: var(--badge-color-third);
+}
+.badge--bigger {
+  font-size: 2.125rem;
 }
 
 .price {
@@ -339,7 +356,6 @@ body {
 .description--secondary-color {
   color: var(--description-color-secondary);
 }
-
 .header {
   max-width: 120rem;
   display: flex;
@@ -669,4 +685,28 @@ body {
     justify-content: center;
     gap: 0;
   }
+}
+.section-quotes {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: center;
+  justify-items: center;
+  gap: 0;
+  max-width: 81.25rem;
+}
+.section-quotes__item {
+  text-align: center;
+}
+
+.wrapper-quotes-icon {
+  grid-column: span 3;
+}
+
+.wrapper-left-switch-button-quotes {
+  justify-self: end;
+}
+
+.wrapper-right-switch-button-quotes {
+  justify-self: start;
 }/*# sourceMappingURL=main.css.map */
