--- a/project/styles/components/_badges.scss
+++ b/project/styles/components/_badges.scss
@@ -23,4 +23,8 @@
         font-size: crem(map_get($typography,lrg-34));
     }
 
+    &--fixed-color {
+        color: var(--badge-color-fixed);
+    }
+
 }
