--- a/project/styles/themes/_light.scss
+++ b/project/styles/themes/_light.scss
@@ -17,6 +17,7 @@
     --badge-color: var(--foreground-color);
     --badge-color-sec: var(--for-bg-secondary-color);
     --badge-color-third: #D7DDDF;
+    --badge-color-fixed: #fff;
 
     --wrapper-cart-body-bg-color: var(--background-color);
 
