--- a/project/styles/themes/_light.scss
+++ b/project/styles/themes/_light.scss
@@ -31,4 +31,6 @@
     --description-color-secondary: var(--background-color);
 
     --section-subscribe-bg-color: var(--foreground-color);
+
+    --footer-inside-border: #D0D0D0;
 }
