--- a/project/styles/components/_hover.scss
+++ b/project/styles/components/_hover.scss
@@ -2,7 +2,6 @@
 @use '../base' as *;
 
 
-
 .hover-insta-shop{
     position: relative;
 }
@@ -27,4 +26,9 @@
         transform: translate(-50%, -50%);
     }
     
+}
+
+
+.hover-footer-icon:hover{
+    color: var(--badge-color-sec);
 }
