--- a/project/styles/layout/_insta-shop.scss
+++ b/project/styles/layout/_insta-shop.scss
@@ -4,6 +4,21 @@
 .section-insta-shop{
     max-width: crem(1300px);
     @extend %margin-l-r-auto;
+
+    &__list {
+        @include grid-box ($grid-columns:1fr 1fr 1fr 1fr 1fr,$grid-rows: auto,$align-items: center,$justify-items: center,$gap: 1rem)
+    }
+
+    &__item{
+        width: 100%;
+        position: relative;
+    }
+
+    &__image{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .wrapper-title-insta-shop__title{
@@ -11,29 +26,21 @@
     margin-bottom: crem(30px);
 }
 
-.section-insta-shop__list{
-    @include grid-box ($grid-columns:1fr 1fr 1fr 1fr 1fr,$grid-rows: auto,$align-items: start,$justify-items: start,$gap: 1rem)
-}
-
-.section-insta-shop__item{
-    width: 100%;
-    position: relative;
-}
-.section-insta-shop__image{
-    width: 100%;
-    object-fit: cover;
-}
 
 @include mq(tablet,max){
     .section-insta-shop{
         padding: 2rem;
-    }
-    .section-insta-shop__list{
-        @include grid-box ($grid-columns:1fr 1fr ,$grid-rows: auto,$align-items: start,$justify-items: start,$gap: 1rem)
-    } 
 
-    .section-insta-shop__item:last-of-type{
-        grid-column: span 2;
+        &__list{
+            @include grid-box ($grid-columns:1fr 1fr ,$grid-rows: auto,$align-items: start,$justify-items: start,$gap: 1rem)
+        }
+
+        &__item:last-of-type{
+            grid-column: span 2; 
+            
+        }
     }
+     
+   
 }
 
