--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -205,6 +205,7 @@ table {
   --description-color: var(--foreground-color);
   --description-color-secondary: var(--background-color);
   --section-subscribe-bg-color: var(--foreground-color);
+  --footer-inside-border: #D0D0D0;
 }
 @media (prefers-color-scheme: dark) {
   :root {
@@ -233,7 +234,7 @@ body {
   overflow: hidden;
 }
 
-.section-insta-shop, .section-quotes, .section-subscribe, .header, .header-navigation__list-toolbar {
+.footer, .footer__navigation, .footer__section-secondary-information-payment-delivery, .section-insta-shop, .section-quotes, .section-subscribe, .header, .header-navigation__list-toolbar {
   margin-left: auto;
   margin-right: auto;
 }
@@ -293,6 +294,9 @@ body {
 }
 .link--ellipsis-border {
   border-bottom: 0.071em dotted var(--link-color);
+}
+.link--underline-border {
+  border-bottom: 0.071em solid var(--link-color);
 }
 
 .list--horizontal {
@@ -383,6 +387,10 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.hover-footer-icon:hover {
+  color: var(--badge-color-sec);
 }
 
 .header {
@@ -743,30 +751,28 @@ body {
 .section-insta-shop {
   max-width: 81.25rem;
 }
-
-.wrapper-title-insta-shop__title {
-  text-align: center;
-  margin-bottom: 1.875rem;
-}
-
 .section-insta-shop__list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
-  align-items: start;
-  justify-items: start;
+  align-items: center;
+  justify-items: center;
   gap: 1rem;
 }
-
 .section-insta-shop__item {
   width: 100%;
   position: relative;
 }
-
 .section-insta-shop__image {
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.wrapper-title-insta-shop__title {
+  text-align: center;
+  margin-bottom: 1.875rem;
 }
 
 @media only screen and (max-width: 61.75em) {
@@ -783,5 +789,106 @@ body {
   }
   .section-insta-shop__item:last-of-type {
     grid-column: span 2;
+  }
+}
+.footer {
+  max-width: 120rem;
+}
+.footer__navigation {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: start;
+  justify-items: center;
+  gap: 2rem;
+  max-width: 81.25rem;
+  padding-bottom: 5rem;
+}
+.footer__section-footer-main-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0.571em;
+}
+.footer__section-secondary-information-payment-delivery {
+  padding: 1.5rem 0;
+  border-top: 0.063rem solid var(--footer-inside-border);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2.875rem;
+}
+
+.section-store-short-description__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1.875rem;
+}
+
+.section-footer-main-content__list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0.571em;
+}
+
+.wrapper-details-info {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.313rem;
+}
+.wrapper-details-info__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.313rem;
+}
+.wrapper-details-info__item {
+  max-width: 3.125rem;
+}
+
+.wrapper-copyright-and-web-desighner-info {
+  margin-left: auto;
+}
+
+@media only screen and (max-width: 41.5625em) {
+  .footer {
+    padding: 2em;
+  }
+  .footer__navigation {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    align-items: center;
+    justify-items: center;
+    gap: 2rem;
+    text-align: center;
+  }
+  .footer__section-footer-main-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 0.571em;
+  }
+}
+@media only screen and (min-width: 78em) {
+  .footer__section-secondary-information-payment-delivery {
+    padding: 1.5rem 19.438rem;
   }
 }/*# sourceMappingURL=main.css.map */
