--- a/project/styles/components/_hover.scss
+++ b/project/styles/components/_hover.scss
@@ -7,6 +7,7 @@
 }
 .hover-insta-shop:hover .wrapper-insta-hover-background{
     display: block;
+    cursor: pointer;
 }
 
 .wrapper-insta-hover-background{
