--- a/project/styles/layout/_insta-shop.scss
+++ b/project/styles/layout/_insta-shop.scss
@@ -5,6 +5,7 @@
     max-width: crem(1300px);
     @extend %margin-l-r-auto;
 
+
     &__list {
         @include grid-box ($grid-columns:1fr 1fr 1fr 1fr 1fr,$grid-rows: auto,$align-items: center,$justify-items: center,$gap: 1rem)
     }
@@ -15,6 +16,7 @@
     }
 
     &__image{
+        display: block;
         width: 100%;
         height: 100%;
         object-fit: cover;
