--- a/project/styles/layout/_quotes.scss
+++ b/project/styles/layout/_quotes.scss
@@ -1,30 +1,36 @@
 @use '../abstracts' as *;
 @use '../base' as *;
 
-.section-quotes{
-    @include grid-box ($grid-columns:1fr 1fr 1fr,$grid-rows: auto,$align-items: center,$justify-items: center,$gap: 0);
+.section-quotes {
+    @include grid-box ($grid-columns: 1fr 1fr 1fr, $grid-rows: auto, $align-items: center, $justify-items: center, $gap: 0);
     max-width: crem(1300px);
     @extend %margin-l-r-auto;
 
-    &__item{
+    &__item {
         text-align: center;
+        max-width: 20ch;
+        max-height: 10rem;
+        overflow: hidden;
+        white-space: pre-wrap;
+        text-overflow: ellipsis;
+        white-space: break-spaces;
     }
-    
+
 }
 
-.wrapper-quotes-icon{
+.wrapper-quotes-icon {
     grid-column: span 3;
-    
+
 }
 
-.wrapper-left-switch-button-quotes{
+.wrapper-left-switch-button-quotes {
     justify-self: end;
 }
 
-.wrapper-right-switch-button-quotes{
+.wrapper-right-switch-button-quotes {
     justify-self: start;
 }
 
-@include mq(phone,max) {
-    
+.section-quotes__description {
+    font-size: clamp(0.5rem, crem(34px), 4vw);
 }
