create company-advantages block

--- a/project/styles/layout/_index.scss
+++ b/project/styles/layout/_index.scss
@@ -1,8 +1,9 @@
 @forward './header';
+@forward './footer';
+@forward './main';
 @forward './cart-product-card';
 @forward './scrolling-bar-products';
 @forward './subscribe';
 @forward './quotes';
 @forward './insta-shop';
-@forward './footer';
-@forward './main';
+@forward './company-advantages';
