--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -234,7 +234,7 @@ body {
   overflow: hidden;
 }
 
-.footer, .footer__navigation, .footer__section-secondary-information-payment-delivery, .section-insta-shop, .section-quotes, .section-subscribe, .header, .header-navigation__list-toolbar {
+.section-insta-shop, .section-quotes, .section-subscribe, .footer, .footer__navigation, .footer__section-secondary-information-payment-delivery, .header, .header-navigation__list-toolbar {
   margin-left: auto;
   margin-right: auto;
 }
@@ -509,6 +509,115 @@ body {
     transform: translate(-100%, 100%);
   }
 }
+.footer {
+  max-width: 120rem;
+}
+.footer__navigation {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: start;
+  justify-items: center;
+  gap: 2rem;
+  max-width: 81.25rem;
+  padding-bottom: 5rem;
+}
+.footer__section-footer-main-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0.571em;
+}
+.footer__section-secondary-information-payment-delivery {
+  padding: 1.5rem 0;
+  border-top: 0.063rem solid var(--footer-inside-border);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2.875rem;
+}
+
+.section-store-short-description__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1.875rem;
+}
+
+.section-footer-main-content__list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0.571em;
+}
+
+.wrapper-details-info {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.313rem;
+}
+.wrapper-details-info__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.313rem;
+}
+.wrapper-details-info__item {
+  max-width: 3.125rem;
+}
+
+.wrapper-copyright-and-web-desighner-info {
+  margin-left: auto;
+}
+
+@media only screen and (max-width: 41.5625em) {
+  .footer {
+    padding: 2em;
+  }
+  .footer__navigation {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    align-items: center;
+    justify-items: center;
+    gap: 2rem;
+    text-align: center;
+  }
+  .footer__section-footer-main-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 0.571em;
+  }
+}
+@media only screen and (min-width: 78em) {
+  .footer__section-secondary-information-payment-delivery {
+    padding: 1.5rem 19.438rem;
+  }
+}
+.main > .section-insta-shop {
+  margin: 6.25rem auto;
+}
+
+.main > section:not(.section-insta-shop) {
+  margin: 7.5rem auto;
+}
+
 .wrapper-cart-body {
   display: none;
   background-color: var(--wrapper-cart-body-bg-color);
@@ -740,12 +849,6 @@ body {
 }
 .section-quotes__item {
   text-align: center;
-  max-width: 20ch;
-  max-height: 10rem;
-  overflow: hidden;
-  white-space: pre-wrap;
-  text-overflow: ellipsis;
-  white-space: break-spaces;
 }
 
 .wrapper-quotes-icon {
@@ -808,119 +911,28 @@ body {
     grid-column: span 2;
   }
 }
-.footer {
-  max-width: 120rem;
+.section-our-company-advantages {
+  max-width: 81.25rem;
 }
-.footer__navigation {
+.section-our-company-advantages__list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
-  align-items: start;
+  align-items: center;
   justify-items: center;
-  gap: 2rem;
-  max-width: 81.25rem;
-  padding-bottom: 5rem;
+  gap: 2em;
 }
-.footer__section-footer-main-content {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 0.571em;
+@media only screen and (max-width: 61.75em) {
+  .section-our-company-advantages__list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2em;
+  }
 }
-.footer__section-secondary-information-payment-delivery {
-  padding: 1.5rem 0;
-  border-top: 0.063rem solid var(--footer-inside-border);
+.section-our-company-advantages__item {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 2.875rem;
-}
-
-.section-store-short-description__list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 1.875rem;
-}
-
-.section-footer-main-content__list {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 0.571em;
-}
-
-.wrapper-details-info {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 0.313rem;
-}
-.wrapper-details-info__list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 0.313rem;
-}
-.wrapper-details-info__item {
-  max-width: 3.125rem;
-}
-
-.wrapper-copyright-and-web-desighner-info {
-  margin-left: auto;
-}
-
-@media only screen and (max-width: 41.5625em) {
-  .footer {
-    padding: 2em;
-  }
-  .footer__navigation {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    align-items: center;
-    justify-items: center;
-    gap: 2rem;
-    text-align: center;
-  }
-  .footer__section-footer-main-content {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: center;
-    gap: 0.571em;
-  }
-}
-@media only screen and (min-width: 78em) {
-  .footer__section-secondary-information-payment-delivery {
-    padding: 1.5rem 19.438rem;
-  }
-}
-.main > .section-insta-shop {
-  margin: 6.25rem auto;
-}
-
-.main > .section-subscribe {
-  margin: 7.5rem auto;
-}
-
-.main > .section-quotes {
-  margin: 7.5rem auto;
-}
-
-.main > .section-scrolling-bar-products {
-  margin: 7.5rem auto;
+  align-items: start;
+  justify-content: center;
+  gap: 1em;
 }/*# sourceMappingURL=main.css.map */
