--- a/project/styles/components/_product-switcher-bar.scss
+++ b/project/styles/components/_product-switcher-bar.scss
@@ -3,9 +3,12 @@
 .product-switcher-bar{
     display: inline-block;
     text-decoration: none;
-    width: crem(25px);
-    height: crem(25px);
+    width: crem(15px);
+    height: crem(15px);
     border-radius: 50%;
     background-color: var(--for-bg-secondary-color);
     color: var(--for-bg-secondary-color);
+    opacity: 0.3;
+    transition: 500ms;
+    z-index: 0;
 }
