--- a/project/styles/components/_title.scss
+++ b/project/styles/components/_title.scss
@@ -16,6 +16,10 @@
         @extend %jost-33;
     }
 
+    &--jost-83{
+        @extend %jost-83;
+    }
+
     &--select{
         text-decoration: underline;
     }
