--- a/project/styles/themes/_light.scss
+++ b/project/styles/themes/_light.scss
@@ -30,6 +30,8 @@
     --description-color: var(--foreground-color);
     --description-color-secondary: var(--background-color);
 
+    --section-tagline-bg-color:#EDF1F3;
+
     --section-subscribe-bg-color: var(--foreground-color);
 
     --footer-inside-border: #D0D0D0;
