finish main page(create section-blogs-cards, section-seasonal-offers section-tagline),about page(create section-store-foundation) ,start shop page(section-selling-items(not finished))

--- a/project/styles/components/_buttons.scss
+++ b/project/styles/components/_buttons.scss
@@ -8,6 +8,7 @@
     @extend %lato-14;
     background-color: var(--button-bg-color);
     color: var(--button-color);
+    text-align: center;
 
     &--border-sm{
         border: crem(1px) solid #EEEEEE;
