--- a/project/styles/base/_helper.scss
+++ b/project/styles/base/_helper.scss
@@ -7,6 +7,15 @@
     overflow: hidden;
 }
 
+.hide-title{
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
 %margin-l-r-auto {
     margin-left: auto;
     margin-right: auto;
