--- a/project/styles/layout/_index.scss
+++ b/project/styles/layout/_index.scss
@@ -7,4 +7,4 @@
 @forward './quotes';
 @forward './insta-shop';
 @forward './company-advantages';
-@forward './tagline-section';
+@forward './section-page-information-card';
