--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
+.title--jost-13 {
+  font-family: "Jost", sans-serif;
+  font-size: 0.813rem;
+}
+
 .description--lato-14, .link, .button {
   font-family: "Lato", sans-serif;
   font-size: 0.875rem;
@@ -190,7 +195,9 @@ table {
   --foreground-color: #272727;
   --background-color: #fff;
   --for-bg-secondary-color: #72AEC8;
+  --background-third-color:#EDF1F3;
   --link-color: var(--foreground-color);
+  --link-secondary-color: var(--for-bg-secondary-color);
   --link-selected-color: var(--for-bg-secondary-color);
   --button-color: var(--foreground-color);
   --button-bg-color: var(--background-color);
@@ -209,7 +216,9 @@ table {
   --title-color-secondary: var(--background-color);
   --description-color: var(--foreground-color);
   --description-color-secondary: var(--background-color);
-  --section-tagline-bg-color:#EDF1F3;
+  --section-tagline-bg-color:var(--background-third-color);
+  --section-seasonal-offers-bg-color:var(--background-third-color);
+  --section-page-information-card-bg-color:var(--background-third-color);
   --section-subscribe-bg-color: var(--foreground-color);
   --footer-inside-border: #D0D0D0;
 }
@@ -240,6 +249,15 @@ body {
   overflow: hidden;
 }
 
+.hide-title {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
 .section-tagline, .section-insta-shop, .section-quotes, .section-subscribe, .main, .footer, .footer__navigation, .footer__section-secondary-information-payment-delivery, .header, .header-navigation__list-toolbar {
   margin-left: auto;
   margin-right: auto;
@@ -251,6 +269,7 @@ body {
   border: none;
   background-color: var(--button-bg-color);
   color: var(--button-color);
+  text-align: center;
 }
 .button--border-sm {
   border: 0.063rem solid #EEEEEE;
@@ -303,6 +322,9 @@ body {
 }
 .link--underline-border {
   border-bottom: 0.071em solid var(--link-color);
+}
+.link--underline-border-secondary-color {
+  border-color: var(--link-secondary-color);
 }
 
 .list--horizontal {
@@ -959,6 +981,68 @@ body {
   gap: 1em;
 }
 
+.section-page-information-card {
+  width: 100%;
+  background-color: var(--section-page-information-card-bg-color);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+  padding: 5em 0;
+}
+
+.section-blogs-cards {
+  max-width: 81.25rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1.875rem;
+}
+.section-blogs-cards__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1.25rem;
+}
+
+.wrapper-blogs-cards-title {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
+}
+
+.section-seasonal-offers {
+  width: 100%;
+  background-color: var(--section-seasonal-offers-bg-color);
+  padding: 13.75rem 26.25rem;
+  position: relative;
+}
+@media only screen and (max-width: 61.75em) {
+  .section-seasonal-offers {
+    padding: 7.5rem 13.75rem;
+  }
+}
+.section-seasonal-offers__title {
+  font-size: clamp(10%, 10vw, 5.188rem);
+}
+.section-seasonal-offers__image {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translate(7%, 8%);
+  opacity: 0.5;
+}
+
 .section-tagline {
   width: 100%;
   background: var(--section-tagline-bg-color);
@@ -980,7 +1064,7 @@ body {
   gap: 2em;
 }
 .section-tagline__title {
-  font-size: clamp(10%, 25vw, 5.188rem);
+  font-size: clamp(10%, 10vw, 5.188rem);
 }
 
 .section-tagline .wrapper-right-switch-button-tagline__button,
@@ -996,10 +1080,46 @@ body {
 .wrapper-tagline-image {
   position: relative;
 }
+@media only screen and (max-width: 61.75em) {
+  .wrapper-tagline-image {
+    display: none;
+  }
+}
 
 .wrapper-tagline-image__apple-watch-image {
   position: absolute;
   bottom: -49%;
   right: -100%;
   transform: translate(100%, 49%);
+}
+
+.section-store-foundation {
+  max-width: 81.25rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 4.375rem;
+}
+@media only screen and (max-width: 61.75em) {
+  .section-store-foundation {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 4.375rem;
+  }
+}
+.section-store-foundation__title {
+  margin-bottom: 0.625rem;
+}
+.section-store-foundation__button {
+  margin-top: 2.5rem;
+}
+@media only screen and (max-width: 61.75em) {
+  .section-store-foundation__video {
+    width: 100%;
+  }
 }/*# sourceMappingURL=main.css.map */
