finish shop page (finish section-selling-items)

--- a/project/styles/components/_hover.scss
+++ b/project/styles/components/_hover.scss
@@ -37,3 +37,7 @@
 .product-switcher-bar:hover{
     opacity: 1;
 }
+
+.wrapper-selling-item-image:hover>.wrapper-selling-item-image__button {
+    display: block;
+}
