--- a/project/styles/layout/_index.scss
+++ b/project/styles/layout/_index.scss
@@ -8,3 +8,4 @@
 @forward './insta-shop';
 @forward './company-advantages';
 @forward './section-page-information-card';
+@forward './section-switcher-type-selling-items';
