--- a/project/styles/themes/_light.scss
+++ b/project/styles/themes/_light.scss
@@ -15,6 +15,9 @@
     --button-bg-color-sec: var(--foreground-color);
     --button-color-third: #fff;
     --button-bg-color-third: var(--for-bg-secondary-color);
+    --button-color-fourth: var(--for-bg-secondary-color);
+    --button-bg-color-fourth: var(--background-color);
+
 
     --badge-color: var(--foreground-color);
     --badge-color-sec: var(--for-bg-secondary-color);
