--- a/project/styles/components/_buttons.scss
+++ b/project/styles/components/_buttons.scss
@@ -9,6 +9,7 @@
     background-color: var(--button-bg-color);
     color: var(--button-color);
     text-align: center;
+    cursor: pointer;
 
     &--border-sm{
         border: crem(1px) solid #EEEEEE;
@@ -22,12 +23,21 @@
         padding:0.6875em 1.1875em;
     }
 
+    &--padding-sm-tp-2 {
+        padding:0.5em 1.875em;
+    }
+    
+
     &--padding-bigger {
         padding: 1em 2.5em;
     }
 
     &--padding-lrg{
         padding: 1em 3.125em;
+    }
+
+    &--no-padding{
+        padding: 0;
     }
 
     &--secondary-color{
@@ -37,5 +47,10 @@
     &--third-color{
         color: var(--button-color-third);
         background-color: var(--button-bg-color-third);
+    }
+
+    &--fourth-color{
+        color: var(--button-color-fourth);
+        background-color: var(--button-bg-color-fourth);
     }
 }
