--- a/project/styles/components/_links.scss
+++ b/project/styles/components/_links.scss
@@ -7,6 +7,7 @@
     display: inline-block;
     padding: cem(10px,map_get($typography,sm-14));
     @extend %lato-14;
+    cursor: pointer;
 
     &--selected{
         color: var(--link-selected-color);
