--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -205,6 +205,8 @@ table {
   --button-bg-color-sec: var(--foreground-color);
   --button-color-third: #fff;
   --button-bg-color-third: var(--for-bg-secondary-color);
+  --button-color-fourth: var(--for-bg-secondary-color);
+  --button-bg-color-fourth: var(--background-color);
   --badge-color: var(--foreground-color);
   --badge-color-sec: var(--for-bg-secondary-color);
   --badge-color-third: #D7DDDF;
@@ -270,6 +272,7 @@ body {
   background-color: var(--button-bg-color);
   color: var(--button-color);
   text-align: center;
+  cursor: pointer;
 }
 .button--border-sm {
   border: 0.063rem solid #EEEEEE;
@@ -280,11 +283,17 @@ body {
 .button--padding-sm-tp-1 {
   padding: 0.6875em 1.1875em;
 }
+.button--padding-sm-tp-2 {
+  padding: 0.5em 1.875em;
+}
 .button--padding-bigger {
   padding: 1em 2.5em;
 }
 .button--padding-lrg {
   padding: 1em 3.125em;
+}
+.button--no-padding {
+  padding: 0;
 }
 .button--secondary-color {
   color: var(--button-color-sec);
@@ -293,6 +302,10 @@ body {
 .button--third-color {
   color: var(--button-color-third);
   background-color: var(--button-bg-color-third);
+}
+.button--fourth-color {
+  color: var(--button-color-fourth);
+  background-color: var(--button-bg-color-fourth);
 }
 
 .title {
@@ -310,6 +323,7 @@ body {
   text-decoration: none;
   display: inline-block;
   padding: 0.714em;
+  cursor: pointer;
 }
 .link--selected {
   color: var(--link-selected-color);
@@ -389,6 +403,9 @@ body {
   padding-left: 1.875em;
   padding-right: 1.875em;
 }
+.input--padding-third {
+  padding: 0.625em 1.875em;
+}
 .input--shorter {
   max-width: 20.5em;
 }
@@ -431,6 +448,10 @@ body {
 
 .product-switcher-bar:hover {
   opacity: 1;
+}
+
+.wrapper-selling-item-image:hover > .wrapper-selling-item-image__button {
+  display: block;
 }
 
 .header {
@@ -993,6 +1014,23 @@ body {
   padding: 5em 0;
 }
 
+.section-switcher-type-selling-items {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: flex-start;
+  gap: 0.625em;
+}
+.section-switcher-type-selling-items__list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: flex-start;
+  gap: 0.5em;
+}
+
 .section-blogs-cards {
   max-width: 81.25rem;
   display: flex;
@@ -1122,4 +1160,128 @@ body {
   .section-store-foundation__video {
     width: 100%;
   }
+}
+
+.section-selling-items {
+  max-width: 81.25rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: start;
+  justify-items: start;
+  gap: 2.5rem;
+}
+.section-selling-items__main-selling-part {
+  grid-column: span 3;
+}
+.section-selling-items__aside-selling-part {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: start;
+  gap: 2.5rem;
+}
+
+.wrapper-selling-items-header-description {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
+  margin-bottom: 1.25rem;
+}
+
+.main-selling-part__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: start;
+  justify-items: start;
+  gap: 0;
+  row-gap: 2.5rem;
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+  margin-bottom: 3.75rem;
+}
+@media only screen and (max-width: 61.75em) {
+  .main-selling-part__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    align-items: start;
+    justify-items: start;
+    gap: 0;
+    row-gap: 2.5rem;
+    -moz-column-gap: 1.25rem;
+         column-gap: 1.25rem;
+  }
+}
+@media only screen and (max-width: 41.5625em) {
+  .main-selling-part__list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    align-items: start;
+    justify-items: start;
+    gap: 0;
+    row-gap: 2.5rem;
+  }
+}
+@media only screen and (max-width: 61.75em) {
+  .main-selling-part__item:last-of-type {
+    grid-column: span 2;
+    justify-self: center;
+  }
+}
+@media only screen and (max-width: 41.5625em) {
+  .main-selling-part__item:last-of-type {
+    grid-column: span 1;
+    justify-self: start;
+  }
+}
+
+.wrapper-selling-item-image {
+  position: relative;
+}
+.wrapper-selling-item-image__image {
+  width: 100%;
+  display: block;
+}
+.wrapper-selling-item-image__button {
+  display: none;
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translate(-50%, 10%);
+  white-space: nowrap;
+}
+
+.wrapper-selling-item-description {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
+  margin-top: 0.625rem;
+}
+
+.wrapper-selling-items-switcher-buttons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 0;
+}
+
+.wrapper-search-selling-items-form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: start;
+  gap: 0;
 }/*# sourceMappingURL=main.css.map */
