--- a/project/styles/components/_index.scss
+++ b/project/styles/components/_index.scss
@@ -8,3 +8,6 @@
 @forward './_inputs';
 @forward './description';
 @forward './hover';
+@forward './counter';
+@forward './comment-card';
+@forward './functional-option';
