--- a/project/styles/layout/_index.scss
+++ b/project/styles/layout/_index.scss
@@ -9,3 +9,4 @@
 @forward './company-advantages';
 @forward './section-page-information-card';
 @forward './section-switcher-type-selling-items';
+@forward './section-selling-item-main-information';
