--- a/project/styles/layout/_cart-product-card.scss
+++ b/project/styles/layout/_cart-product-card.scss
@@ -31,6 +31,10 @@ $padding-total-and-subtotal-price: crem(20px) 0;
     padding: crem(20px) 0;
     border-top: $border-for-cart;
 
+    &>.wrapper-counter{
+        justify-content: center;
+    }
+
 }
 
 .wrapper-cart-body__item:last-of-type {
@@ -53,14 +57,6 @@ $padding-total-and-subtotal-price: crem(20px) 0;
     text-align: right;
 }
 
-.wrapper-counter {
-    @include flex-box ($flex-direction: row, $flex-wrap: nowrap, $align-items: center, $gap: 0.2em);
-    justify-content: center;
-}
-
-.wrapper-count {
-    padding: 0 cem(30px, map-get($typography, med-16));
-}
 
 .wrapper-subtotal-product-price {
     text-align: center;
