--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -25,7 +25,7 @@
   font-size: 1.25rem;
 }
 
-.title--jost-30 {
+.title--jost-30, .button--jost-30 {
   font-family: "Jost", sans-serif;
   font-size: 1.875rem;
 }
@@ -265,6 +265,10 @@ body {
   margin-right: auto;
 }
 
+.text-opacity-0-4 {
+  opacity: 0.4;
+}
+
 .button {
   display: inline-block;
   text-decoration: none;
@@ -289,6 +293,9 @@ body {
 .button--padding-bigger {
   padding: 1em 2.5em;
 }
+.button--padding-bigger-tp-1 {
+  padding: 1.17em 2.5em;
+}
 .button--padding-lrg {
   padding: 1em 3.125em;
 }
@@ -306,6 +313,9 @@ body {
 .button--fourth-color {
   color: var(--button-color-fourth);
   background-color: var(--button-bg-color-fourth);
+}
+.button--selected {
+  text-decoration: underline;
 }
 
 .title {
@@ -452,6 +462,59 @@ body {
 
 .wrapper-selling-item-image:hover > .wrapper-selling-item-image__button {
   display: block;
+}
+
+.wrapper-counter {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.2em;
+}
+
+.wrapper-count {
+  padding: 0 1.875em;
+}
+
+.wrapper-comment-card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1.25rem;
+}
+.wrapper-comment-card__image {
+  display: block;
+  max-width: 6.563rem;
+}
+
+.wrapper-user-comment {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 0.313rem;
+}
+
+.wrapper-functional-option {
+  width: 6em;
+  height: 6em;
+  border-radius: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 0.2em;
+  color: #fff;
+  background-color: #66d12d;
+}
+
+.wrapper-functional-option > label {
+  text-align: center;
 }
 
 .header {
@@ -719,6 +782,9 @@ body {
   padding: 1.25rem 0;
   border-top: 0.063rem solid #CDCDCD;
 }
+.wrapper-cart-body__item > .wrapper-counter {
+  justify-content: center;
+}
 
 .wrapper-cart-body__item:last-of-type {
   border-bottom: 0.063rem solid #CDCDCD;
@@ -748,20 +814,6 @@ body {
 
 .wrapper-delete-position {
   text-align: right;
-}
-
-.wrapper-counter {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 0.2em;
-  justify-content: center;
-}
-
-.wrapper-count {
-  padding: 0 1.875em;
 }
 
 .wrapper-subtotal-product-price {
@@ -1029,6 +1081,360 @@ body {
   align-items: start;
   justify-content: flex-start;
   gap: 0.5em;
+}
+
+.section-selling-item-overview {
+  max-width: 81.25rem;
+}
+
+.section-selling-item-main-information {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: start;
+  justify-items: stretch;
+  gap: 1.25rem;
+  margin-bottom: 7.5rem;
+}
+@media only screen and (max-width: 61.75em) {
+  .section-selling-item-main-information {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 34.375rem;
+    align-items: start;
+    justify-items: stretch;
+    gap: 1.25rem;
+  }
+}
+
+.wrapper-selected-option-image {
+  width: 100%;
+  display: none;
+  position: relative;
+}
+
+.wrapper-selected-option-image__image {
+  max-width: 34.375rem;
+  height: 34.375rem;
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  animation: switch-image 1s linear;
+}
+@media only screen and (max-width: 61.75em) {
+  .wrapper-selected-option-image__image {
+    border-radius: 100%;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+}
+
+@keyframes switch-image {
+  0% {
+    scale: 0;
+  }
+  100% {
+    scale: 1;
+  }
+}
+#watch-pink-color:checked ~ .wrapper-optional-images > .watch-pink {
+  display: block;
+}
+
+#watch-green-color:checked ~ .wrapper-optional-images > .watch-green {
+  display: block;
+}
+
+#watch-blue-color:checked ~ .wrapper-optional-images > .watch-blue {
+  display: block;
+}
+
+#watch-black-color:checked ~ .wrapper-optional-images > .watch-black {
+  display: block;
+}
+
+.wrapper-product-main-description {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: flex-start;
+  gap: 1.25rem;
+}
+@media only screen and (max-width: 61.75em) {
+  .wrapper-product-main-description {
+    align-items: center;
+  }
+}
+
+.wrapper-choose-options {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: flex-start;
+  gap: 1.25rem;
+}
+@media only screen and (max-width: 61.75em) {
+  .wrapper-choose-options {
+    align-self: flex-start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
+    gap: 1.25rem;
+  }
+}
+
+.section-selling-item-options {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: flex-start;
+  gap: 0.75rem;
+}
+.section-selling-item-options__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: start;
+  gap: 1.25rem;
+}
+
+.section-selling-item-detailed-information {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: flex-start;
+  gap: 0;
+}
+
+.wrapper-section-selling-item-detailed-information-buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 3.75rem;
+}
+@media only screen and (max-width: 41.5625em) {
+  .wrapper-section-selling-item-detailed-information-buttons {
+    flex-direction: column;
+    gap: 0.625rem;
+  }
+}
+
+#selling-item-description:checked ~ .wrapper-main-product-information > .wrapper-selling-product-description {
+  display: flex;
+  animation: appear-card 1.1s linear forwards;
+}
+
+#selling-item-additional-information:checked ~ .wrapper-main-product-information > .wrapper-selling-item-additional-information {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#selling-item-reviews:checked ~ .wrapper-main-product-information > .wrapper-selling-item-reviews-comments {
+  display: block;
+}
+
+#selling-item-reviews:checked ~ .wrapper-main-product-information > .wrapper-selling-item-reviews-comments > .wrapper-comment-card {
+  animation: appear-card 1.1s linear forwards;
+}
+
+@keyframes appear-card {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.wrapper-main-product-information {
+  width: 100%;
+  margin-top: 1.875rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: flex-start;
+  gap: 0;
+}
+
+.wrapper-selling-product-description {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: start;
+  justify-content: center;
+  gap: 3.125rem;
+  display: none;
+}
+
+.wrapper-selling-item-additional-information {
+  align-self: center;
+  width: 18.75rem;
+  height: 18.75rem;
+  border-radius: 100%;
+  border: 3px solid green;
+  position: relative;
+  display: none;
+}
+
+.wrapper-selling-item-additional-information__image {
+  display: block;
+  align-self: center;
+  width: 50%;
+  height: 50%;
+  border-radius: 100%;
+}
+
+.wrapper-functional-option {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  animation: option-zoom 1.2s linear forwards;
+}
+
+@keyframes option-zoom {
+  0% {
+    scale: 0;
+    transform: translate(-50%, -50%);
+  }
+  100% {
+    scale: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+.wrapper-functional-option:nth-of-type(1) {
+  animation: fly-0-deg 1.2s linear forwards;
+}
+
+@keyframes fly-0-deg {
+  0% {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-220%, -50%);
+    opacity: 1;
+  }
+}
+.wrapper-functional-option:nth-of-type(2) {
+  animation: fly-45-deg 1.2s linear forwards;
+}
+
+@keyframes fly-45-deg {
+  0% {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-170%, -170%);
+    opacity: 1;
+  }
+}
+.wrapper-functional-option:nth-of-type(3) {
+  animation: fly-90-deg 1.2s linear forwards;
+}
+
+@keyframes fly-90-deg {
+  0% {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-50%, -220%);
+    opacity: 1;
+  }
+}
+.wrapper-functional-option:nth-of-type(4) {
+  animation: fly-135-deg 1.2s linear forwards;
+}
+
+@keyframes fly-135-deg {
+  0% {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(70%, -170%);
+    opacity: 1;
+  }
+}
+.wrapper-functional-option:nth-of-type(5) {
+  animation: fly-180-deg 1.2s linear forwards;
+}
+
+@keyframes fly-180-deg {
+  0% {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(120%, -50%);
+    opacity: 1;
+  }
+}
+.wrapper-functional-option:nth-of-type(6) {
+  animation: fly-225-deg 1.2s linear forwards;
+}
+
+@keyframes fly-225-deg {
+  0% {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(70%, 70%);
+    opacity: 1;
+  }
+}
+.wrapper-functional-option:nth-of-type(7) {
+  animation: fly-270-deg 1.2s linear forwards;
+}
+
+@keyframes fly-270-deg {
+  0% {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-50%, 120%);
+    opacity: 1;
+  }
+}
+.wrapper-functional-option:nth-of-type(8) {
+  animation: fly-315-deg 1.2s linear forwards;
+}
+
+@keyframes fly-315-deg {
+  0% {
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-170%, 70%);
+    opacity: 1;
+  }
+}
+.wrapper-selling-item-reviews-comments {
+  display: none;
+}
+
+.wrapper-selling-item-reviews-comments > .wrapper-comment-card {
+  margin-top: 1.875rem;
 }
 
 .section-blogs-cards {
