--- a/project/styles/layout/_cart-product-card.scss
+++ b/project/styles/layout/_cart-product-card.scss
@@ -4,7 +4,19 @@
 $border-for-cart: crem(1px) solid #CDCDCD;
 $padding-total-and-subtotal-price: crem(20px) 0;
 
+
+.section-cart{
+    max-width: crem(1300px);
+}
+
 .wrapper-cart-body {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+
+.wrapper-cart-overlay {
     display: none;
     background-color: var(--wrapper-cart-body-bg-color);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -31,7 +43,7 @@ $padding-total-and-subtotal-price: crem(20px) 0;
     padding: crem(20px) 0;
     border-top: $border-for-cart;
 
-    &>.wrapper-counter{
+    &>.wrapper-counter {
         justify-content: center;
     }
 
@@ -42,7 +54,7 @@ $padding-total-and-subtotal-price: crem(20px) 0;
 }
 
 .wrapper-product-short-description {
-    @include flex-box ($flex-direction: row, $flex-wrap: nowrap, $align-items: center, $gap: 0);
+    @include flex-box ($flex-direction: row, $flex-wrap: nowrap, $align-items: center, $gap: crem(15px));
 }
 
 .wrapper-product-short-description__image {
@@ -76,6 +88,6 @@ $padding-total-and-subtotal-price: crem(20px) 0;
     border-bottom: $border-for-cart;
 }
 
-.wrapper-cart-buttons{
+.wrapper-cart-buttons {
     @include flex-box ($flex-direction: row, $flex-wrap: nowrap, $align-items: center, $justify-content: flex-start, $gap: 1rem)
 }
